Change in names

--- a/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
+++ b/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
@@ -62,25 +62,25 @@
                 <tr>
                   <th scope="col">Supplier Name</th>
                   <th scope="col" style="text-align: right;">Avg. Purchase</th>
-                  <th scope="col" style="text-align: right;">Avg. Purchase Returns</th>
+                  <th scope="col" style="text-align: right;">Avg. Purchase Return</th>
                   <th scope="col" style="text-align: right;">Avg. Purchase Schedule</th>
                   <th scope="col" style="text-align: right;">Delivery Rating</th>
                   <th scope="col" style="text-align: right;">Delivery Rating </th>
                   <th scope="col" style="text-align: right;">Quality Rating</th>
                   <th scope="col" style="text-align: right;">Q1 Purchase</th>
-                  <th scope="col" style="text-align: right;">Q1 purchase Return</th>
+                  <th scope="col" style="text-align: right;">Q1 Purchase Return</th>
                   <th scope="col" style="text-align: right;">Q1 Delivery Rating</th>
                   <th scope="col" style="text-align: right;">Q1 Quality Rating</th>
                   <th scope="col" style="text-align: right;">Q2 Purchase</th>
-                  <th scope="col" style="text-align: right;">Q2 purchase Return</th>
+                  <th scope="col" style="text-align: right;">Q2 Purchase Return</th>
                   <th scope="col" style="text-align: right;">Q2 Delivery Rating</th>
                   <th scope="col" style="text-align: right;">Q2 Quality Rating</th>
                   <th scope="col" style="text-align: right;">Q3 Purchase</th>
-                  <th scope="col" style="text-align: right;">Q3 purchase Return</th>
+                  <th scope="col" style="text-align: right;">Q3 Purchase Return</th>
                   <th scope="col" style="text-align: right;">Q3 Delivery Rating</th>
                   <th scope="col" style="text-align: right;">Q3 Quality Rating</th>
                   <th scope="col" style="text-align: right;">Q4 Purchase</th>
-                  <th scope="col" style="text-align: right;">Q4 purchase Return</th>
+                  <th scope="col" style="text-align: right;">Q4 Purchase Return</th>
                   <th scope="col" style="text-align: right;">Q4 Delivery Rating</th>
                   <th scope="col" style="text-align: right;">Q4 Quality Rating</th>
                 </tr>
