--- a/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
+++ b/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
@@ -81,7 +81,7 @@
                                 <tr>
                                     <th scope="col" class="td_left">Customer Name</th>
                                     <th scope="col" class="td_right">VA %</th>
-                                    <th scope="col" class="td_right">Planed Sale</th>
+                                    <th scope="col" class="td_right">Planned Sale</th>
                                     <th scope="col" class="td_right">Actual Sale</th>
                                     <th scope="col" class="td_right">1st 50% Debit note/Invoice No.</th>
                                     <th scope="col" class="td_right">Difference</th>
