--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -82,12 +82,12 @@
                 <tr>
                   <th class="td_left" style="width: 20%;">Customer Name</th>
                   <th class="td_left">Part Name</th>
-                  <th class="td_Right">Development P.O.No/Referance</th>
-                  <th class="td_right">Approved Development Cost In INR</th>
-                  <th class="td_left">1st 50% Debit Note/Invoice No.</th>
-                  <th class="td_left">Balance 50% Debit Note/Invoice No.</th>
-                  <th class="td_right">Development Cost Received In INR</th>
-                  <th class="td_right">Balanced D.C. In INR to be Received</th>
+                  <th class="td_Right">Development P.O.No/Reference</th>
+                  <th class="td_right">Approved Development Cost in INR</th>
+                  <th class="td_left">1st 50% Debit note/Invoice No.</th>
+                  <th class="td_left">Balance 50% Debit note/Invoice No.</th>
+                  <th class="td_right">Development cost received in INR</th>
+                  <th class="td_right">Balance D.C. in INR to be Received</th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
