--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
@@ -73,18 +73,18 @@
             <table class="table table-striped table-bordered table-hover compact">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
-                  <th class="td_right">Sr. No.</th>
-                  <th class="td_left">Name of Customer</th>
-                  <th class="td_right">Payment Amount Plan For The Month Rs.</th>
-                  <th class="td_right">Amount Received Rs.</th>
-                  <th class="td_right">% of Recovery</th>
-                  <th class="td_right">Credit Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
-                  <th class="td_right">Avg Payment Receipt Days</th>
+                  <th class="td_right">SR. NO.</th>
+                  <th class="td_left">NAME OF CUSTOMER</th>
+                  <th class="td_right">PAYMENT AMOUNT PLAN FOR THE MONTH Rs.</th>
+                  <th class="td_right">AMOUNT RECEIVED Rs.</th>
+                  <th class="td_right">% OF RECOVERY</th>
+                  <th class="td_right">CREDIT DAYS</th>
+                  <th class="td_right">AVG. PAYMENT RECEIPT DAYS</th>
+                  <th class="td_right">AVG. PAYMENT RECEIPT DAYS</th>
+                  <th class="td_right">AVG. PAYMENT RECEIPT DAYS</th>
+                  <th class="td_right">AVG. PAYMENT RECEIPT DAYS</th>
+                  <th class="td_right">AVG. PAYMENT RECEIPT DAYS</th>
+                  <th class="td_right">AVG. PAYMENT RECEIPT DAYS</th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
