--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -102,7 +102,7 @@
             <table class="table table-striped table-bordered table-hover compact">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
-                  <th scope="col" class="td_right">Sr. No.</th>
+                  <th scope="col" class="td_right">Sr. no.</th>
                   <th scope="col" class="td_left" style="width: 30%;">Supplier Name</th>
                   <th scope="col" class="td_right">Receipt Qty</th>
                   <th scope="col" class="td_right">CR Qty</th>
