--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,7 @@
 thead {
   // background-image: -webkit-linear-gradient(top, #dae7f6, #cddef3 45%, #abc7ec 46%, #abc7ec 50%, #b8cfee 51%, #cbddf3);
   background: #b8cfee;
+  margin: -1% !important;
 }
 
 tr:nth-child(even) {
@@ -110,6 +111,7 @@ body[data-sidebar=dark] .navbar-brand-box {
 
 .page-content {
   padding: calc(34px + 24px) calc(14px * 0.75) 60px calc(16px * 0.75) !important;
+  
 }
 
 .required {
@@ -199,7 +201,7 @@ td {
 
 .table {
 
-  --bs-table-hover-bg: gray !important;
+  --bs-table-hover-bg: #dfe6ec !important;
 
 }
 
@@ -212,27 +214,44 @@ html {
   border-style: solid none solid;
   border-color: #93B5D2;
   border-width: 1px medium 1px;
+  // position: relative !important;
+  //   z-index: 0 !important;
 }
+
+.ng-select .ng-clear-wrapper {
+  display: none !important;
+
+}
+
+.ng-dropdown-panel .scroll-host {
+ 
+  position: fixed !important;
+  width: fit-content !important;
+
+}
+
+
+.card {
+  
+  --bs-card-bg:#ffffff !important;
+ 
+}
+
 body {
   overflow: hidden;
+  background-color: white !important;
 }
 
-<<<<<<< Updated upstream
-=======
-.is-parent {
-  width: 420px !important;
+.ng-select {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  width: fit-content !important;
 }
 
-body[data-sidebar=dark] #sidebar-menu ul li a {
-  color: black !important;
+.loader {
+  position: absolute;
+  top: 45%;
+  left: 55%;
+  transform: translate(-50%, -50%);
 }
-
-body[data-sidebar=dark].vertical-collpsed .vertical-menu #sidebar-menu>ul>li:hover>a {
-  background: white !important;
-}
-
-body[data-sidebar=dark].vertical-collpsed .vertical-menu #sidebar-menu ul li.mm-active .active {
-  color: blue !important;
-}
-                                                                    
->>>>>>> Stashed changes
