--- a/DASHBOARD/assets/scss/custom/structure/_footer.scss
+++ b/DASHBOARD/assets/scss/custom/structure/_footer.scss
@@ -9,7 +9,7 @@
     right: 0;
     color: $footer-color;
     left: 250px;
-    height: $footer-height;
+    height: 20px;
     background-color: $footer-bg;
 
     @media (max-width: 991.98px) {
