--- a/DASHBOARD/assets/scss/custom/structure/_topbar.scss
+++ b/DASHBOARD/assets/scss/custom/structure/_topbar.scss
@@ -19,7 +19,9 @@
     align-items: center;
     margin: 0 auto;
     height: $header-height;
-    padding: 0 calc(#{$grid-gutter-width} * 0.5) 0 0 /*rtl: 0 0 0 calc(#{$grid-gutter-width} / 2) */;
+    padding: 0 calc(#{$grid-gutter-width} * 0.5) 0 0
+    /*rtl: 0 0 0 calc(#{$grid-gutter-width} / 2) */
+    ;
 
     .dropdown .show {
         &.header-item {
@@ -49,7 +51,8 @@
 /* Search */
 
 .app-search {
-    padding: calc(#{$header-height - 38px} * 0.5) 0;
+    // padding: calc(#{$header-height - 38px} * 0.5) 0;
+    padding: 32px;
 
     .form-control {
         border: none;
@@ -60,6 +63,7 @@
         box-shadow: none;
         border-radius: 30px;
     }
+
     span {
         position: absolute;
         z-index: 10;
@@ -74,10 +78,11 @@
 // Mega menu
 
 .megamenu-list {
-    li{
+    li {
         position: relative;
         padding: 5px 0px;
-        a{
+
+        a {
             color: var(--#{$prefix}body-color);
         }
     }
@@ -183,9 +188,10 @@
 }
 
 body[data-topbar="dark"] {
-    #page-topbar { 
+    #page-topbar {
         background-color: $header-dark-bg;
     }
+
     .navbar-header {
         .dropdown .show {
             &.header-item {
@@ -200,7 +206,7 @@ body[data-topbar="dark"] {
 
     .header-item {
         color: $header-dark-item-color;
-    
+
         &:hover {
             color: $header-dark-item-color;
         }
@@ -209,7 +215,7 @@ body[data-topbar="dark"] {
     .header-profile-user {
         background-color: rgba($white, 0.25);
     }
-    
+
     .noti-icon {
         i {
             color: $header-dark-item-color;
@@ -225,21 +231,22 @@ body[data-topbar="dark"] {
     }
 
     .app-search {
-    
+
         .form-control {
-            background-color: rgba($topbar-search-bg,0.07);
+            background-color: rgba($topbar-search-bg, 0.07);
             color: $white;
         }
+
         span,
         input.form-control::-webkit-input-placeholder {
-            color: rgba($white,0.5);
+            color: rgba($white, 0.5);
         }
     }
 }
 
 body[data-sidebar="dark"] {
     .navbar-brand-box {
-        background: $sidebar-dark-bg;
+        background: white;
     }
 
     .logo-dark {
@@ -274,16 +281,17 @@ body[data-layout="horizontal"] {
     .navbar-brand-box {
         width: auto;
     }
+
     .page-content {
         margin-top: $header-height;
         padding: calc(55px + #{$grid-gutter-width}) calc(#{$grid-gutter-width} * 0.5) $footer-height calc(#{$grid-gutter-width} * 0.5);
-    }    
+    }
 }
 
-@media (max-width: 992px) { 
+@media (max-width: 992px) {
     body[data-layout="horizontal"] {
         .page-content {
             margin-top: 15px;
-        }    
+        }
     }
 }
