--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -1,10 +1,10 @@
 <div class="text-center">
-  <i class="fa" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
+  <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
+  <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
 </div>
 <div class="card" *ngIf="!isLoading1">
   <div class="card-header">
     <h5>Top5-Suppliers-Cr-Percent</h5>
-  </div>
   </div>
   <form [formGroup]="angForm">
     <div class="card-block">
@@ -32,8 +32,8 @@
           <div class="form-group input-group">
             <span class="border-lable-flt">
               <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" appTheme class="form-control"
-                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" [maxDate]="maxDate"
-                formControlName="FROM" required bsDatepicker>
+                (focus)="onFocus(FROM)" [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate"
+                [maxDate]="maxDate" formControlName="FROM" required bsDatepicker style="max-width: 100px;">
             </span>
           </div>
           <div class="form-group form-primary form-static-label"
@@ -50,7 +50,7 @@
             <span class="border-lable-flt">
               <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
                 [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="todate" formControlName="TO" required
-                appTheme bsDatepicker>
+                appTheme bsDatepicker style="max-width: 100px;">
             </span>
           </div>
           <div class="form-group form-primary form-static-label"
@@ -91,6 +91,7 @@
       </div>
     </div>
   </form>
+</div>
 
 
 <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
@@ -102,14 +103,14 @@
             <table class="table table-striped table-bordered table-hover compact">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr>
-                  <th scope="col" class="td_right">Sr. no.</th>
-                  <th scope="col" class="td_left" style="width: 30%;">Supplier Name</th>
-                  <th scope="col" class="td_right">Receipt Qty</th>
-                  <th scope="col" class="td_right">CR Qty</th>
-                  <th scope="col" class="td_right">Receipt Tonnage</th>
-                  <th scope="col" class="td_right">CR Tonnage</th>
-                  <th scope="col" class="td_right">CR % On Tonnage</th>
-                  <th scope="col" class="td_left">Rejection Details</th>
+                  <th class="td_right">Sr. No.</th>
+                  <th class="td_left" style="width: 30%;">Supplier Name</th>
+                  <th class="td_right">Receipt Qty</th>
+                  <th class="td_right">CR Qty</th>
+                  <th class="td_right">Receipt Tonnage</th>
+                  <th class="td_right">CR Tonnage</th>
+                  <th class="td_right">CR % On Tonnage</th>
+                  <th class="td_left">Rejection Details</th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
