--- a/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
+++ b/src/app/pages/sales/customer-ci-grade-per-kg-rate-realization/customer-ci-grade-per-kg-rate-realization.component.html
@@ -1,7 +1,7 @@
 <div class="text-center">
   <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
 
-  <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i> 
+  <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
 </div>
 <div class="card" *ngIf="!isLoading1">
   <div class="card-header">
@@ -9,12 +9,13 @@
   </div>
   <form [formGroup]="angForm">
     <div class="card-block">
-      <div class="form-group row justify-content-md-center" style="margin: 1%;">
+      <div class="row" style="margin: 1%;">
         <!--  *ngIf="showBranch" -->
+
         <div class="col-sm-2" *ngIf="showBranch">
           <label>Select Branch <sub class="required">* </sub></label>
         </div>
-        <div class="col-sm-2" *ngIf="showBranch">
+        <div class="col-sm" *ngIf="showBranch">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
               <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME [(ngModel)]="selectedBrach"
@@ -43,7 +44,7 @@
         <div class="col-sm-2">
           <label>Customer Type <sub class="required"> * </sub></label>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3">
           <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="CUTOMER_TYPE" id="inlineRadio1" value="0"
               formControlName="CUTOMER_TYPE">
@@ -55,11 +56,13 @@
             <label class="form-check-label" for="inlineRadio2">Export</label>
           </div>
         </div>
+      </div>
 
+      <div class="row" style="margin: 1%;">
         <div class="col-sm-2">
           <label>Weight <sub class="required"> * </sub></label>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3">
           <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="WEIGHT" id="inlineRadio1" value="0"
               formControlName="WEIGHT">
@@ -71,14 +74,8 @@
             <label class="form-check-label" for="inlineRadio2">Finished</label>
           </div>
         </div>
-  
-
-      </div>
-
-      
-      <div class="form-group row justify-content-md-center" style="margin: 1%;">
-        <div class="col-sm text-center">
-          <button class="btn btn-primary sm"[disabled]="isLoading" (click)="loadData()">Go <i class="fa"
+        <div class="col-sm">
+          <button class="btn btn-primary sm" [disabled]="isLoading" (click)="loadData()">Go <i class="fa"
               [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
         </div>
       </div>
@@ -122,6 +119,7 @@
                   <td class="td_right">{{data?.INVOICE_AMT}}</td>
                   <td class="td_right">{{data?.DIFF_AMT}}</td> -->
                 </tr>
+              </tbody>
               <tbody *ngIf="Tabledata.length ==0">
                 <tr>
                   <td>No Data</td>
