--- a/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
+++ b/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
@@ -1,10 +1,12 @@
 <div class="text-center">
-    <i class="fa" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
+    <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
+
+    <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
+
 </div>
 <div class="card" *ngIf="!isLoading1">
     <div class="card-header">
         <h5>Customer wise plan vs actual sale</h5>
-    </div>
     </div>
     <form [formGroup]="angForm">
         <div class="card-block">
@@ -41,27 +43,22 @@
                         </span>
                     </div>
                 </div>
-                <!-- </div> -->
-                <!-- <div class="row" style="margin: 2%;">
-                <div class="col-sm-3">
-                    <label>Select Month *</label>
+                <div class="col-sm-2">
+                    <label>Select Month <sub class="required">* </sub></label>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-2">
                     <div class="form-group form-primary form-static-label">
                         <span class="border-lable-flt">
-                            <ng-select id="MONTH_NAME" bindValue="CODE" bindLabel="NAME" required #MONTH_NAME
+                            <ng-select id="MONTH_NAME" bindValue="DateValue" bindLabel="DateDesc" required #MONTH_NAME
                                 [(ngModel)]=" selectedMonth" formControlName="MONTH_NAME" (focus)="onFocus(MONTH_NAME)"
                                 [selectOnTab]='true'>
-                                <ng-option *ngFor="let values of branch" [value]="values">
-                                    {{values.NAME}}</ng-option>
+                                <ng-option *ngFor="let values of month" [value]="values">
+                                    {{values.DateDesc}}</ng-option>
                             </ng-select>
                         </span>
                     </div>
                 </div>
-            </div> -->
-                <!-- </div>
 
-        <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
                 <div class="col-sm">
                     <button class="btn btn-primary sm" [disabled]="isLoading" (click)="loadData()">Go <i class="fa"
                             [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
@@ -69,7 +66,7 @@
             </div>
         </div>
     </form>
-
+</div>
 <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
     <div class="col-12">
         <div class="table-responsive">
@@ -79,13 +76,13 @@
                         <table class="table table-striped table-bordered table-hover compact">
                             <thead style="position: sticky; top: 0; text-align: center;">
                                 <tr>
-                                    <th scope="col" class="td_left">Customer Name</th>
-                                    <th scope="col" class="td_right">VA %</th>
-                                    <th scope="col" class="td_right">Planned Sale</th>
-                                    <th scope="col" class="td_right">Actual Sale</th>
-                                    <th scope="col" class="td_right">1st 50% Debit note/Invoice No.</th>
-                                    <th scope="col" class="td_right">Difference</th>
-                                    <th scope="col" class="td_right">VA Effect</th>
+                                    <th class="td_left" style="width: 20%;">Customer Name</th>
+                                    <th class="td_right">VA %</th>
+                                    <th class="td_right">Planned Sale</th>
+                                    <th class="td_right">Actual Sale</th>
+                                    <!-- <th class="td_right">1st 50% Debit note/Invoice No.</th> -->
+                                    <th class="td_right">Difference</th>
+                                    <th class="td_right">VA Effect</th>
                                 </tr>
                             </thead>
                             <tbody *ngIf="Tabledata.length !=0">
@@ -97,6 +94,7 @@
                                     <td class="td_right">{{data.DIFF_QTY}}</td>
                                     <td class="td_right">{{data.VA_EFFECT}}</td>
                                 </tr>
+                            </tbody>
                             <tbody *ngIf="Tabledata.length ==0">
                                 <td>No Data</td>
                             </tbody>
