--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -1,11 +1,13 @@
 <div class="text-center">
-  <i class="fa" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
+  <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
+
+  <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
 </div>
 <div class="card" *ngIf="!isLoading1">
   <div class="card-header">
     <h5>Development Cost Details</h5>
   </div>
-  </div>
+
   <form [formGroup]="angForm">
     <div class="card-block">
       <div class="row" style="margin: 1%;">
@@ -32,8 +34,8 @@
           <div class="form-group input-group">
             <span class="border-lable-flt">
               <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
-                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" [maxDate]="maxDate" bsDatepicker
-                formControlName="FROM" required style="min-width: 80px;">
+                (focus)="onFocus(FROM)" [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate"
+                [maxDate]="maxDate" bsDatepicker formControlName="FROM" required style="max-width: 100px;">
             </span>
           </div>
           <div class="form-group form-primary form-static-label"
@@ -49,7 +51,7 @@
             <span class="border-lable-flt">
               <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
                 [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [minDate]="fromdate" [(ngModel)]="todate" bsDatepicker
-                formControlName="TO" required>
+                formControlName="TO" required style="max-width: 100px;">
             </span>
           </div>
           <div class="form-group form-primary form-static-label"
@@ -69,7 +71,7 @@
       </div>
     </div>
   </form>
-
+</div>
 
 <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
   <div class="col-12">
@@ -82,12 +84,12 @@
                 <tr>
                   <th class="td_left" style="width: 20%;">Customer Name</th>
                   <th class="td_left">Part Name</th>
-                  <th class="td_Right">Development P.O.No/Reference</th>
-                  <th class="td_right">Approved Development Cost in INR</th>
-                  <th class="td_left">1st 50% Debit note/Invoice No.</th>
-                  <th class="td_left">Balance 50% Debit note/Invoice No.</th>
-                  <th class="td_right">Development cost received in INR</th>
-                  <th class="td_right">Balance D.C. in INR to be Received</th>
+                  <th class="td_Right">Development P.O.No/Referance</th>
+                  <th class="td_right">Approved Development Cost In INR</th>
+                  <th class="td_left">1st 50% Debit Note/Invoice No.</th>
+                  <th class="td_left">Balance 50% Debit Note/Invoice No.</th>
+                  <th class="td_right">Development Cost Received In INR</th>
+                  <th class="td_right">Balanced D.C. In INR to be Received</th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
@@ -97,15 +99,28 @@
                   <td class="td_right">{{data?.PO_NO}}</td>
                   <td class="td_right">{{data?.ORDER_AMT}}</td>
                   <td class="td_left">{{data?.PROFORMA_INV_DETAILS}}</td>
-                  <td  class="td_left">{{data?.SALE_INV_DETAILS}}</td>
+                  <td class="td_left">{{data?.SALE_INV_DETAILS}}</td>
                   <td class="td_right">{{data?.INVOICE_AMT}}</td>
                   <td class="td_right">{{data?.DIFF_AMT}}</td>
                 </tr>
+              </tbody>
               <tbody *ngIf="Tabledata.length ==0">
                 <tr>
                   <td>No Data</td>
                 </tr>
               </tbody>
+              <tfoot style="position: sticky; bottom: 0; text-align: center;">
+                <tr>
+                  <td class="td_left" style="font-weight: bold;">Total</td>
+                  <td class="td_left"> </td>
+                  <td class="td_right"></td>
+                  <td class="td_right" style="font-weight: bold;">{{totalDevelopmentCost}}</td>
+                  <td class="td_left"></td>
+                  <td class="td_left"></td>
+                  <td class="td_right">{{totalDevelopmentCostReceived}}</td>
+                  <td class="td_right">{{totalBalanceDcinReceived}}</td>
+                </tr>
+              </tfoot>
             </table>
           </div>
         </div>
