--- a/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
+++ b/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
@@ -1,10 +1,11 @@
 <div class="text-center">
-  <i class="fa" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
+  <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
+
+  <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
 </div>
 <div class="card" *ngIf="!isLoading1">
   <div class="card-header">
-    <h5>Monthly Value Addition</h5>
-  </div>
+    <h5>Monthly Value Addition Target V/s Actual </h5>
   </div>
   <form [formGroup]="angForm">
     <div class="card-block">
@@ -46,7 +47,7 @@
       </div>
     </div>
   </form>
-
+</div>
 <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
   <div class="col-12">
     <div class="table-responsive">
