--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -1,10 +1,10 @@
 <div class="text-center">
-    <i class="fa" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
+    <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
+    <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
 </div>
 <div class="card" *ngIf="!isLoading1">
     <div class="card-header">
         <h5>Oil Consumption</h5>
-    </div>
     </div>
     <form [formGroup]="angForm">
         <div class="card-block">
@@ -52,6 +52,7 @@
             </div>
         </div>
     </form>
+</div>
 
 
 
@@ -65,7 +66,7 @@
                         <table class="table table-striped table-bordered table-hover compact">
                             <thead style="position: sticky; top: 0; text-align: center;">
                                 <tr *ngIf="Headers.length !=0">
-                                    <th scope="col" *ngFor="let data of Headers" style="text-align: right;">
+                                    <th *ngFor="let data of Headers" style="text-align: right;">
                                         {{data.MAT_NAME}}
                                     </th>
                                 </tr>
