--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -111,14 +111,14 @@
               </tbody>
               <tfoot style="position: sticky; bottom: 0; text-align: center;">
                 <tr>
-                  <td class="td_left" style="font-weight: bold;">Total</td>
-                  <td class="td_left"> </td>
-                  <td class="td_right"></td>
-                  <td class="td_right" style="font-weight: bold;">{{totalDevelopmentCost}}</td>
-                  <td class="td_left"></td>
-                  <td class="td_left"></td>
-                  <td class="td_right">{{totalDevelopmentCostReceived}}</td>
-                  <td class="td_right">{{totalBalanceDcinReceived}}</td>
+                  <th class="td_left">Total</th>
+                  <th class="td_left"> </th>
+                  <th class="td_right"></th>
+                  <th class="td_right">{{totalDevelopmentCost}}</th>
+                  <th class="td_left"></th>
+                  <th class="td_left"></th>
+                  <th class="td_right">{{totalDevelopmentCostReceived}}</th>
+                  <th class="td_right">{{totalBalanceDcinReceived}}</th>
                 </tr>
               </tfoot>
             </table>
