--- a/src/app/pages/finance/customer-receivable-chart/customer-receivable-chart.component.html
+++ b/src/app/pages/finance/customer-receivable-chart/customer-receivable-chart.component.html
@@ -48,7 +48,7 @@
             <span class="border-lable-flt">
               <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
                 [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [minDate]="fromdate" [(ngModel)]="todate" bsDatepicker
-                formControlName="TO" required  style="max-width: 100px;">
+                formControlName="TO" required appTheme style="max-width: 100px;">
             </span>
           </div>
           <div class="form-group form-primary form-static-label"
