--- a/src/app/pages/purchase/purchase-tonnage/purchase-tonnage.component.html
+++ b/src/app/pages/purchase/purchase-tonnage/purchase-tonnage.component.html
@@ -1,172 +1,79 @@
-<div class="text-center">
-    <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
-    <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
-</div>
-<div class="card" *ngIf="!isLoading1">
+<div class="card">
     <div class="card-header">
         <h5>Purchase Tonnage</h5>
     </div>
-    <form [formGroup]="angForm">
-        <div class="card-block">
-            <div class="row" style="margin: 1%;">
-                <div class="col-sm-2" *ngIf="showBranch">
-                    <label>Select Branch <sub class="required"> * </sub></label>
-                </div>
-                <div class="col-sm-2" *ngIf="showBranch">
-                    <div class="form-group form-primary form-static-label">
-                        <span class="border-lable-flt">
-                            <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME
-                                [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
-                                [selectOnTab]='true' [required]="BRANCH">
-                                <ng-option *ngFor="let values of branch" [value]="values">
-                                    {{values.NAME}}</ng-option>
-                            </ng-select>
-                        </span>
-                    </div>
-                </div>
-                <div class="col-sm-2">
-                    <label>Select Dates <sub class="required">* </sub></label>
-                </div>
-                <div class="col-sm-2">
-                    <div class="form-group input-group">
-                        <span class="border-lable-flt">
-                            <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
-                                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" [maxDate]="maxDate"
-                                formControlName="FROM" required bsDatepicker style="max-width: 100px;">
-                        </span>
-                    </div>
-                </div>
-                <div class="col-sm-2">
-                    <div class="form-group input-group">
-                        <span class="border-lable-flt">
-                            <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
-                                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="todate" formControlName="TO"
-                                required bsDatepicker style="max-width: 100px;">
-                        </span>
-                    </div>
-                </div>
+    <div class="card-block">
+        <div class="row" style="margin: 2%;" *ngIf="showBranch">
+            <div class="col-sm-3">
+                <label>Select Branch *</label>
             </div>
-
-            <!-- </div>-->
-            <div class="row" style="margin: 1%;">
-                <div class="col-sm-2">
-                    <label>Supplier Category <sub class="required"> * </sub></label>
-                </div>
-                <div class="col-sm">
-                    <div class="form-group form-primary form-static-label">
-                        <span class="border-lable-flt">
-                            <ng-select id="SUPPLIERCATEGORY" bindValue="CODE" bindLabel="NAME" required
-                                [(ngModel)]="selectedCategory" #SUPPLIERCATEGORY (focus)="onFocus(SUPPLIERCATEGORY)"
-                                [selectOnTab]='true' formControlName="SUPPLIERCATEGORY">
-                                <ng-option *ngFor="let values of suppliCate" [value]="values">
-                                    {{values.NAME}}</ng-option>
-                            </ng-select>
-                        </span>
-                    </div>
-                </div>
-
-                <div class="col-sm-2">
-                    <label>Select Supplier <sub class="required"> * </sub></label>
-                </div>
-                <div class="col-sm">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="SUPPLIER" id="inlineRadio1" value="0"
-                            formControlName="SUPPLIER" (change)="check(0)">
-                        <label class="form-check-label" for="inlineRadio1">All Supplier</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="SUPPLIER" id="inlineRadio2" value="1"
-                            formControlName="SUPPLIER" (change)="check(1)">
-                        <label class="form-check-label" for="inlineRadio2">Selected Supplier</label>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group row justify-content-md-center">
-                <div class="col-sm text-center">
-                    <button class="btn btn-primary sm" [disabled]="isLoading" (click)="loadData()">Go <i class="fa"
-                            [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+            <div class="col-sm-4">
+                <div class="form-group form-primary form-static-label">
+                    <span class="border-lable-flt">
+                        <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
+                            (focus)="onFocus(BRANCH_NAME)" [selectOnTab]='true'>
+                            <ng-option *ngFor="let values of branch" [value]="values">
+                                {{values.NAME}}</ng-option>
+                        </ng-select>
+                    </span>
                 </div>
             </div>
         </div>
-    </form>
-    <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
-        <div class="col-12">
-            <div class="table-responsive">
-                <div class="table-fixed">
-                    <div class="card">
-                        <div class="card-block">
-                            <table class="table table-striped table-bordered table-hover compact">
-                                <thead style="position: sticky; top: 0; text-align: center;">
-                                    <tr>
-                                        <th class="td_right"></th>
-                                        <th class="td_left">Supplier Name</th>
 
-                                    </tr>
-                                </thead>
-                                <tbody *ngIf="Tabledata.length !=0">
-                                    <tr *ngFor="let data of Tabledata ; let indexOfelement = index">
-                                        <td class="td_right"><input type="checkbox" value="{{data.SUB_GLACNO}}"
-                                                [(ngModel)]="data.checked" id="indexOfelement"></td>
-                                        <td class="td_left">{{data.SUBGL_LONGNAME}}</td>
-
-                                    </tr>
-                                <tbody *ngIf="Tabledata.length ==0">
-                                    <td>No Data</td>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+        <div class="row" style="margin: 2%;">
+            <div class="col-sm-3">
+                <label>Select Dates *</label>
+            </div>
+            <div class="col-sm-4">
+                <div class="form-group input-group">
+                    <span class="border-lable-flt">
+                        <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
+                            [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
+                    </span>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="form-group input-group">
+                    <span class="border-lable-flt">
+                        <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
+                            [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
+                    </span>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable1">
-        <div class="col-12">
-            <div class="table-responsive">
-                <div class="table-fixed">
-                    <div class="card">
-                        <div class="card-block">
-                            <table class="table table-striped table-bordered table-hover compact">
-                                <thead style="position: sticky; top: 0; text-align: center;">
-                                    <tr>
-                                        <th class="td_left">Supplier Name</th>
-                                        <th class="td_right"> Purchase Qty</th>
-                                        <th class="td_right"> Purchase Weight</th>
-                                        <th class="td_right"> Purchase Amt</th>
-                                        <th class="td_right"> Rate Diff Amt</th>
-                                        <th class="td_right"> Total Purchase Amt</th>
-                                        <th class="td_right"> Rejection Qty</th>
-                                        <th class="td_right"> Rejection Weight</th>
-                                        <th class="td_right"> Rejection Amt</th>
-                                        <th class="td_right"> Net Pur Qty</th>
-                                        <th class="td_right"> Net Pur Weight</th>
-                                        <th class="td_right"> Net Pur Amt</th>
+        <div class="row" style="margin: 2%;">
+            <div class="col-sm-3">
+                <label>Supplier Category *</label>
+            </div>
+            <div class="col-sm-4">
+                <div class="form-group form-primary form-static-label">
+                    <span class="border-lable-flt">
+                        <ng-select id="SUPPLIERCATEGORY" bindValue="CODE" bindLabel="NAME" required #SUPPLIERCATEGORY
+                            (focus)="onFocus(SUPPLIERCATEGORY)" [selectOnTab]='true' >
+                            <ng-option *ngFor="let values of suppliCate" [value]="values">
+                                {{values.NAME}}</ng-option>
+                        </ng-select>
+                    </span>
+                </div>
+            </div>
 
-                                    </tr>
-                                </thead>
-                                <tbody *ngIf="Tabledata1.length !=0">
-                                    <tr *ngFor="let data of Tabledata1 ; let indexOfelement = index">
-                                        <td class="td_left">{{data.AC_NAME}}</td>
-                                        <td class="td_right">{{data.PURCHASE_QTY}}</td>
-                                        <td class="td_right">{{data.PURCHASE_WEIGHT}}</td>
-                                        <td class="td_right">{{data.PURCHASE_AMT}}</td>
-                                        <td class="td_right">{{data.RATE_DIFF_AMOUNT}}</td>
-                                        <td class="td_right">{{data.TOT_PURCH_AMT}}</td>
-                                        <td class="td_right">{{data.REJECTION_QTY}}</td>
-                                        <td class="td_right">{{data.REJECTION_WEIGHT}}</td>
-                                        <td class="td_right">{{data.REJECTION_AMT}}</td>
-                                        <td class="td_right">{{data.REJECTION_AMT}}</td>
-                                        <td class="td_right">{{data.NET_PUR_QTY}}</td>
-                                        <td class="td_right">{{data.NET_PUR_WT}}</td>
-                                        <td class="td_right">{{data.NET_PUR_AMT}}</td>
-
-                                    </tr>
-                                <tbody *ngIf="Tabledata1.length ==0">
-                                    <td>No Data</td>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+        </div>
+        <div class="row" style="margin: 2%;">
+            <div class="col-sm-3">
+                <label>Select Supplier *</label>
+            </div>
+            <div class="col-sm-4">
+                <div class="form-check mb-3">
+                    <input class="form-check-input" type="radio" name="formRadios" id="formRadios1" checked>
+                    <label class="form-check-label" for="formRadios1">
+                        Form Radio
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="formRadios" id="formRadios2">
+                    <label class="form-check-label" for="formRadios2">
+                        Form Radio checked
+                    </label>
                 </div>
             </div>
         </div>
