change the all modules table width for all heading in 1 line

--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
@@ -74,10 +74,10 @@
                 <tr>
                   <th class="td_right">Sr. No.</th>
                   <th class="td_left">Name of Customer</th>
-                  <th class="td_right">Payment Amount Plan For The Month Rs.</th>
-                  <th class="td_right">Amount Received Rs.</th>
-                  <th class="td_right">% of Recovery</th>
-                  <th class="td_right">Credit Days</th>
+                  <th  class="td_left">Payment Amount Plan For The Month Rs.</th>
+                  <th class="td_left">Amount Received Rs.</th>
+                  <th class="td_left">% of Recovery</th>
+                  <th class="td_left">Credit Days</th>
                   <th class="td_right">Avg Payment Receipt Days</th>
                   <th class="td_right">Avg Payment Receipt Days</th>
                   <th class="td_right">Avg Payment Receipt Days</th>
