--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,7 +50,6 @@ thead {
   // background-image: -webkit-linear-gradient(top, #dae7f6, #cddef3 45%, #abc7ec 46%, #abc7ec 50%, #b8cfee 51%, #cbddf3);
   background: #b8cfee;
   margin: -1% !important;
-  
 }
 
 tr:nth-child(even) {
@@ -78,7 +77,6 @@ tfoot {
 
 .table> :not(caption)>*>* {
   padding: 5px !important;
-  
 }
 
 
@@ -182,16 +180,11 @@ table td.newhighlight {
 }
 
 .td_right {
-  text-align: left;
-  
-  
+  text-align: right;
 }
 
 .td_left {
   text-align: left;
-  
-  
-
 }
 
 th,
@@ -209,10 +202,6 @@ td {
 .table {
 
   --bs-table-hover-bg: #dfe6ec !important;
-  table-layout: auto;
-  width: 100%; 
-  white-space: nowrap;
-  
 
 }
 
