--- a/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
+++ b/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
@@ -56,14 +56,17 @@
         <div class="card">
           <div class="card-block">
             <table class="table table-striped table-bordered table-hover compact">
-              <thead style="position: sticky; top: 0; text-align: center;">
+              <thead style="position: sticky; top: 0; text-align: center;width: max-content;">
                 <tr *ngIf="Headers.length !=0">
-                  <th scope="col" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
+                  <th class="td_left" style="width: max-content;">Month</th>
+                  <th scope="col"style="width: max-content;" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
                   </th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
                 <tr *ngFor="let data of Tabledata;">
+                  <!-- <td class="td_left">{{data[0]}}</td> -->
+
                   <td *ngFor="let datarec of data" style="text-align: right;">{{datarec != null ? datarec : 0}}</td>
                 </tr>
               </tbody>
