--- a/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
+++ b/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
@@ -57,13 +57,16 @@
             <table class="table table-striped table-bordered table-hover compact">
               <thead style="position: sticky; top: 0; text-align: center;">
                 <tr *ngIf="Headers.length !=0">
+                  <th class="td_left">Month</th>
                   <th scope="col" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
                   </th>
                 </tr>
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
                 <tr *ngFor="let data of Tabledata;">
-                  <td *ngFor="let datarec of data" style="text-align: right;">{{datarec != null ? datarec : 0}}</td>
+                  <td class="td_left">{{data[0]}}</td>
+
+                  <td *ngFor="let datarec of data.slice(1)" style="text-align: right;">{{datarec != null ? datarec : 0}}</td>
                 </tr>
               </tbody>
             </table>
