--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -2,10 +2,14 @@
     <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
     <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
 </div>
+
+
 <div class="card" *ngIf="!isLoading1">
     <div class="card-header">
         <h5>Oil Consumption</h5>
+
     </div>
+
     <form [formGroup]="angForm">
         <div class="card-block">
             <div class="row" style="margin: 1%;">
@@ -24,6 +28,7 @@
                         </span>
                     </div>
                 </div>
+
                 <!-- </div>
             <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
                 <div class="col-sm-2">
@@ -41,8 +46,10 @@
                         </span>
                     </div>
                 </div>
+
                 <!-- </div> -->
                 <!-- </div>
+                    
 
         <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
                 <div class="col-sm">
@@ -53,7 +60,7 @@
         </div>
     </form>
 </div>
-
+<!-- <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search..."> -->
 
 
 <!-- *ngIf="showtable" -->
@@ -65,11 +72,13 @@
                     <div class="card-block">
                         <table class="table table-striped table-bordered table-hover compact">
                             <thead style="position: sticky; top: 0; text-align: center;">
+
                                 <tr *ngIf="Headers.length !=0">
                                     <th *ngFor="let data of Headers" style="text-align: right;">
                                         {{data.MAT_NAME}}
                                     </th>
                                 </tr>
+                                
                             </thead>
                             <tbody *ngIf="Tabledata.length !=0">
                                 <tr *ngFor="let data of Tabledata;">
